deploy/kustomize/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerd
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: server
          imagePullPolicy: IfNotPresent
