deploy/kustomize/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintainerd
spec:
  ingressClassName: nginx
  rules:
    - host: maintainerd.example.com # set real domain
      http:
        paths:
          - path: /webhook
            pathType: Prefix
            backend:
              service:
                name: maintainerd
                port:
                  number: 2525
